--- a/blog/Gemfile
+++ b/blog/Gemfile
@@ -1,4 +1,4 @@
-source 'https://rubygems.org'
+source 'http://rubygems.org'
 
 
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
@@ -13,6 +13,10 @@ gem 'uglifier', '>= 1.3.0'
 gem 'coffee-rails', '~> 4.0.0'
 # See https://github.com/sstephenson/execjs#readme for more supported runtimes
 # gem 'therubyracer',  platforms: :ruby
+
+gem 'coffee-script-source', '1.8.0'
+
+gem 'foundation-rails', '5.4.5'
 
 # Use jquery as the JavaScript library
 gem 'jquery-rails'
